<?xml version="1.0"?>
<package>
  <name>testnode</name>
  <version>0.0.1</version>

  <description>
    To do: read ecal pointcloud, publish as ros pointcloud2
  </description>

  <maintainer email="wolfgang.schulz@gmail.com">Wolfgang Schulz</maintainer>

  <license>BSD</license>
  <url>https://anigators.com</url>
  <author email="wolfgang.schulz@gmail.com">Wolfgang Schulz</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
<!--  <build_depend>eigen_conversions</build_depend>
-->  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>tf</run_depend>
<!--  <run_depend>eigen_conversions</run_depend>
-->
  <export>
  </export>
</package>
